--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,14 @@
     -webkit-appearance: none;
     margin: 0;
   }
+}@keyframes fadeIn {
+  from { opacity: 0 }
+  to { opacity: 1 }
 }
+.animate-fadeIn {
+  animation: fadeIn 0.3s ease-out;
+}
+
 @keyframes slideDown {
   0% {
     transform: translateY(-100%);
